# mipt-architectures

./: .gitattributes  .gitignore  README.md
hw-1/: README.md
hw-1/fill-db/: CMakeLists.txt  data.json  fill.cpp
hw-1/server/: CMakeLists.txt  start.sh
hw-1/server/database/: database.cpp  person.cpp  person.h
hw-1/server/web_server/handlers/: person_handler.h
hw-2/: CMakeLists.txt  README.md  start.sh
hw-2/config/: config.cpp  config.h
hw-2/database/: cache.cpp  cache.h  person.cpp  person.h
hw-2/docker/: docker-compose.yml
hw-2/web_server/: http_request_factory.h  http_web_server.h
hw-2/web_server/handlers/: person_handler.h
hw-3/: README.md
hw-3/fill-db/: CMakeLists.txt  fill.cpp
hw-3/server/: CMakeLists.txt  start.sh
hw-3/server/database/: database.cpp  database.h  person.cpp  person.h
hw-3/server/docker/: docker-compose.yml
hw-3/server/docker/proxysql/: proxysql.cnf
hw-3/server/web_server/: http_web_server.h
hw-3/server/web_server/handlers/: person_handler.h
hw-4/: CMakeLists.txt  README.md  start.sh  start_writer.sh  writer_main.cpp
hw-4/config/: config.cpp  config.h
hw-4/database/: database.cpp  database.h  person.cpp  person.h
hw-4/web_server/: http_web_server.h
hw-4/web_server/handlers/: person_handler.h
